<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0"
        android:gravity="center">
        <!-- CALCULATIONS SECTION -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".33">
            <EditText
                android:id="@+id/input"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:inputType="numberDecimal"
                android:textSize="50sp"
                android:hint="@string/calculator_preview"
                android:gravity="bottom|end">
            </EditText>
        </TableRow>

        <!-- BUTTONS SECTION -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".04">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/clear_button"
                    android:textSize="25sp">
                </Button>
                <Button
                    android:id="@+id/modulo_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/modulo_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/sqrt_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sqrt_button"
                    android:textSize="25sp">
                </Button>
                <Button
                    android:id="@+id/divide_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/divide_button"
                    android:textSize="50sp">
                </Button>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".04">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/one_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/one_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/two_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/two_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/three_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/three_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/multiply_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/multiply_button"
                    android:textSize="50sp">
                </Button>

            </LinearLayout>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".04">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/four_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/four_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/five_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/five_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/six_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/six_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/minus_button"
                    android:textSize="50sp">
                </Button>


            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".04">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/seven_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/seven_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/eight_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/eight_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/nine_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/nine_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus_button"
                    android:textSize="50sp">
                </Button>

            </LinearLayout>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".04">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/zero_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/zero_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/dot_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dot_button"
                    android:textSize="50sp">
                </Button>
                <Button
                    android:id="@+id/sign_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sign_button"
                    android:textSize="30sp">
                </Button>
                <Button
                    android:id="@+id/equal_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/equal_button"
                    android:textSize="50sp">
                </Button>


            </LinearLayout>

        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>